# rumi-leaf

./: .gitattributes  .gitignore  CLAUDE.md  README.md  generate_disc_floret_stl.py  generate_leaf_stl.py  generate_medallion_stl.py  index.html  medallion.stl  pyproject.toml  test_generate_medallion.py
.github/workflows/: deploy.yml
